[package]
name = "hybrid"
version = "0.1.0"
authors = ["James Angstrom"]

[dependencies]
amethyst = { path = "../amethyst" }
gilrs = "0.6.1"
nalgebra = "0.16.8"
nalgebra-glm = "0.1.0"
ncollide3d = "0.17.1"
rand = "0.5.5"

thread_profiler = { version = "0.3", optional = true }

[features]
profiler = [
    "thread_profiler",
    "thread_profiler/thread_profiler",
    "amethyst/profiler",
]

[profile.release]
opt-level = 3
debug = true
